envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              stat_prefix: ingress_http
              route_config: 
                name: all
                virtual_hosts:
                  - name: micro_cluster
                    domains: 
                      - '*'
                    routes:
                      - match: { prefix: "/secure" }
                        direct_response: {
                          status: 403,
                          body: {
                            inline_string: "Forbidden"
                          }
                        }
                      - match: { prefix: "/" }
                        route:
                          cluster: micro_cluster
              http_filters:
                - name: envoy.filters.http.router

        # TLS Configuration 
        # transport_socket:
        #   name: envoy.transport_sockets.tls
        #     typed_config:
        #       "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
        #       common_tls_context: 
        #         tls_certificates:
        #           certificate_chain: { filename: "cert.pem" }
        #           private_key: { filename: "private.pem" }
        #         alpn_protocols: ["h2,http/1.1"]
        #         tls_params:
        #           tls_minimum_protocol_version: "TLSv1_2"

  clusters:
    - name: micro_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: micro_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro
                    port_value: 8080
            # - endpoint:
            #     address:
            #       socket_address:
            #         address: micro
            #         port_value: 8081
            # ...
            # ...
            # ...
